5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1592_2425.log
== SUBMITION (2019-03-25 14:53:55) 
-- CODE:
a= float(input())
b= float(input())

c= (a/b)
print(round(c))
-- EXECUTION TIME:
0.161745
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:09) 
-- CODE:
a= float(input())
b= float(input())

print(round(a/b),3)
-- EXECUTION TIME:
0.129469
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14 3
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18 3
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
10 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:11) 
-- CODE:
a= float(input())
b= float(input())

print(round(a/b),3)
-- OUTPUT:
14 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:26) 
-- CODE:
a= float(input())
b= float(input())

print(round(a/b),3)
-- EXECUTION TIME:
0.1841
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14 3
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18 3
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
10 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:41) 
-- CODE:
a= float(input())
b= float(input())

print(round((a/b)),3)
-- EXECUTION TIME:
0.118937
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14 3
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18 3
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
10 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:55:32) 
-- CODE:
a= float(input("distância total:"))
b= float(input("combustível gasto:"))

print(round((a/b)),3)
-- OUTPUT:
14 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:56:54) 
-- CODE:
a= float(input())
b= float(input())
c= round((a/b),3)
print(c "km/l")
-- ERROR:
File "XXXX", line 4
    print(c "km/l")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:57:03) 
-- CODE:
a= float(input())
b= float(input())
c= round((a/b),3)
print(c"km/l")
-- ERROR:
File "XXXX", line 4
    print(c"km/l")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:57:29) 
-- CODE:
a= float(input())
b= float(input())
c= round((a/b),3)
print("c km/l")
-- OUTPUT:
c km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:07) 
-- CODE:
a= float(input())
b= float(input())

print(round((a/b),3))
-- EXECUTION TIME:
0.187691
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:58:07) 
-- CODE:
a= float(input())
b= float(input())

print(round((a/b),3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:26) 
-- CODE:
a= float(input())
b= float(input())

print(round((a/b),3)"km/l")
-- EXECUTION TIME:
0.112711
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round((a/b),3)"km/l")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:58:26) 
-- CODE:
a= float(input())
b= float(input())

print(round((a/b),3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round((a/b),3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:59:46) 
-- CODE:
a= float(input())
b= float(input())
c= a/b
print(round(c,3)"km/l")
-- EXECUTION TIME:
0.129966
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(c,3)"km/l")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:00:02) 
-- CODE:
a= float(input())
b= float(input())
c= a/b
print(round(c,3),"km/l")
-- EXECUTION TIME:
0.244031
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
